# pretty-table-explorer

./: CLAUDE.md  Cargo.toml  README.md  export.csv  export.json  install.sh  test.csv
.github/workflows/: ci.yml  release.yml
.planning/: ISSUES.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  agent-history.json  config.json
.planning/debug/resolved/: mouse-escape-leak-v2.md
.planning/milestones/: v1.0-ROADMAP.md  v1.1-ROADMAP.md  v1.2-ROADMAP.md  v1.2.1-ROADMAP.md  v1.3-ROADMAP.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md
.planning/phases/02-table-rendering/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md
.planning/phases/03-navigation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md
.planning/phases/04-postgresql-integration/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-FIX-SUMMARY.md  04-02-FIX.md  04-02-ISSUES.md  04-02-PLAN.md  04-02-SUMMARY.md
.planning/phases/05-release-infrastructure/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md
.planning/phases/06-installation-updates/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md
.planning/phases/07-column-controls/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-ISSUES.md
.planning/phases/08-data-export/: 08-01-FIX-SUMMARY.md  08-01-FIX.md  08-01-ISSUES.md  08-01-PLAN.md  08-01-SUMMARY.md
.planning/phases/09-multiple-tables/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-FIX-SUMMARY.md  09-03-FIX.md  09-03-FIX2-PLAN.md  09-03-FIX2-SUMMARY.md  09-03-FIX3-PLAN.md  09-03-FIX3-SUMMARY.md  09-03-FIX4-PLAN.md  09-03-FIX4-SUMMARY.md  09-03-ISSUES.md  (+6 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benches/: parsing.rs  rendering.rs  scrolling.rs
src/: column.rs  db.rs  export.rs  handlers.rs  lib.rs  main.rs  parser.rs  render.rs  state.rs  streaming.rs  update.rs  workspace.rs
tests/: column_tests.rs  export_tests.rs  scroll_tests.rs  search_tests.rs
(+45 files in other folders)
