[package]
name = "pretty-table-explorer"
version = "1.1.1"
edition = "2021"
description = "Interactive terminal table viewer for PostgreSQL"
authors = ["Jack Labbe"]
license = "MIT"
repository = "https://github.com/j-labbe/pretty-table-explorer"
readme = "README.md"

[[bin]]
name = "pte"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["use-dev-tty"] }
csv = "1"
postgres = "0.19"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = { version = "2", features = ["json"] }
